1.5/config/deployment_backend_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-backend-v1
  labels:
    app: deployment-backend-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-backend-v1
  template:
    metadata:
      labels:
        app: deployment-backend-v1
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool
