1.5/config/deployment_frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-frontend-v1
  labels:
    app: deployment-frontend-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment-frontend-v1
  template:
    metadata:
      labels:
        app: deployment-frontend-v1
    spec:
      containers:
        - name: nginx
          image: nginx
