1.5/config/service_backend_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-backend-v1
spec:
  selector:
    app: deployment-backend-v1
  ports:
    - name: multitool-http
      port: 9002
      targetPort: 1180
