1.5/config/service_frontend_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-frontend-v1
spec:
  selector:
    app: deployment-frontend-v1
  ports:
    - name: nginx-http
      port: 9001
      targetPort: 80
