1.5/config/ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v1
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-frontend-v1
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: service-backend-v1
            port:
              number: 9002
